# worktrees

./: .gitignore  .gitmodules  .shellcheckrc  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  MIGRATION.md  Makefile  README.md  findings.md  install.sh  progress.md  task_plan.md
.github/workflows/: ci.yml  release.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/src/: App.css  App.tsx  SettingsSheet.tsx  TerminalPane.tsx  main.tsx  settings.ts  tokens.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/mock/: fixtures.ts  install.ts
crates/worktrees-cli/: Cargo.toml
crates/worktrees-cli/src/: main.rs
crates/worktrees-core/: Cargo.toml
crates/worktrees-core/src/: config.rs  error.rs  git.rs  lib.rs  model.rs  ops.rs  project.rs  render.rs  store.rs  sysclock.rs  tmux.rs  ui.rs
scripts/: make-samples.sh
test/: json.bats  ls.bats  misc.bats  new.bats  open.bats  real-tmux.bats  rm.bats  switch.bats
test/helpers/: common.bash
